--- a/BlazorAppRecipe/Pages/Home.razor
+++ b/BlazorAppRecipe/Pages/Home.razor
@@ -1,20 +1,48 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
-
 <h1>Hello, world!</h1>
 <p>Текущая дата: @CurrentDate</p>
 <p>Текущая дата: @CurrentTime</p>
 
+@foreach (var user in result)
+{
+	<p>@user.FirstName @user.LastName</p>
+}
+
 @code{
+
+	public class User
+	{
+		public int UserId { get; set; }
+
+		public string Username { get; set; } = null!;
+
+		public string Email { get; set; } = null!;
+
+		public string Password { get; set; } = null!;
+
+		public string? FirstName { get; set; }
+
+		public string? LastName { get; set; }
+
+		public DateTime? RegistrationDate { get; set; }
+	}
+
+	public User[] result = new User[] { };
 	string CurrentDate;
 	string CurrentTime;
+
+
 
 	protected override async Task OnInitializedAsync()
 	{
 		var date = DateTime.Now;
 		CurrentDate = date.ToShortDateString();
-
 		CurrentTime = date.ToShortTimeString();
+
+		var client = new HttpClient();
+		client.BaseAddress = new Uri("https://recipewebrender33.onrender.com/");
+		result = await client.GetFromJsonAsync<User[]>("api/User");
+		return;
 	}
 }
