--- a/BlazorAppRecipe/Layout/NavMenu.razor.css
+++ b/BlazorAppRecipe/Layout/NavMenu.razor.css
@@ -1,10 +1,10 @@
 .navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgb(128, 0, 128);
 }
 
 .top-row {
     height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgb(128, 0, 128);
 }
 
 .navbar-brand {
@@ -47,7 +47,7 @@
     }
 
     .nav-item ::deep a {
-        color: #d7d7d7;
+        color: #000000;
         border-radius: 4px;
         height: 3rem;
         display: flex;
@@ -55,15 +55,14 @@
         line-height: 3rem;
     }
 
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.37);
-    color: white;
-}
-
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
+        .nav-item ::deep a.active {
+            background-color: rgb(128, 0, 128);
+            color: white;
+        }
+        .nav-item ::deep a:hover {
+            background-color: rgb(128, 0, 128);
+            color: white;
+        }
 
 @media (min-width: 641px) {
     .navbar-toggler {
