--- a/BlazorAppRecipe/wwwroot/css/app.css
+++ b/BlazorAppRecipe/wwwroot/css/app.css
@@ -23,11 +23,6 @@ a, .btn-link {
 .content {
     padding-top: 1.1rem;
 }
-
-.valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
-}
-
 .invalid {
     outline: 1px solid red;
 }
@@ -99,7 +94,7 @@ a, .btn-link {
     }
 
 code {
-    color: #c02d76;
+    color: #fff;
 }
 
 /* Styling for Navbar */
@@ -130,7 +125,7 @@ nav ul li a {
 }
 
     nav ul li a:hover {
-        color: #683aa4;
+        color: #fff;
     }
 
 /* Styling for Hero Section */
