--- a/BlazorAppRecipe/Pages/Home.razor
+++ b/BlazorAppRecipe/Pages/Home.razor
@@ -25,22 +25,22 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>Привет,<br>базист!</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet soluta veniam voluptate aliquam deleniti labore quod quis illum, sapiente nam nesciunt magni voluptatibus voluptatem incidunt placeat consequuntur quaerat voluptatum expedita!</p>
-                <button type="button" class="btn btn-dark btn-lg">Начать!</button>
+                <h1>Добро<br>пожаловать</h1>
+                <p>Мы рады приветствовать вас в мире кулинарии, где вы можете делиться своими любимыми рецептами и находить вдохновение для новых блюд. Наша платформа создана для всех, кто любит готовить и хочет обмениваться идеями с единомышленниками.</p>
+                <p>Что мы предлагаем?</p>
             </div>
             <div class="col">
-                <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="...">
+                <img src="https://goods-photos.static1-sima-land.com/items/7325965/1/700-nw.jpg">
             </div>
         </div>
+        <div class="block"></div>
         <div class="row cards">
             <div class="col-md-4 d-flex justify-content-center">
                 <div class="card">
                     <div class="card-body">
                         <!-- here is where they add the ICON -->
-                        <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="icon">
-                        <h5 class="card-title">SQL Server</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">ШИРОКИЙ ВЫБОР</h5>
+                        <p class="card-text">От простых до сложных, от завтраков до ужинов, от быстрых до долгих - Вы найдете именно то, что Вам нужно.  </p>
                     </div>
                 </div>
             </div>
@@ -48,9 +48,8 @@
                 <div class="card">
                     <div class="card-body">
                         <!-- here is where they add the ICON -->
-                        <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="icon">
-                        <h5 class="card-title">Web API</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">ОПЫТ СООБЩЕСТВА</h5>
+                        <p class="card-text">Делитесь своими рецептурами и обсуждайте их с другими, оставляйте комментарии - Вы находитесь в сообществе людей, увлеченных одним делом.</p>
                     </div>
                 </div>
             </div>
@@ -58,9 +57,8 @@
                 <div class="card">
                     <div class="card-body">
                         <!-- here is where they add the ICON -->
-                        <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="icon">
-                        <h5 class="card-title">Blazor WASM</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<h5 class="card-title">ПОЛЕЗНЫЕ СОВЕТЫ</h5>
+                        <p class="card-text"> Читайте статьи и делитесь секретами кулинарного мастерства. В каждой семье хранятся рецепты, все они разные, у всех свои хитрости и лайфхаки. </p>
                     </div>
                 </div>
             </div>
@@ -72,13 +70,14 @@
         <div class="row align-items-center">
             <div class="col">
                 <!-- another image can be inserted here -->
-                <img src="https://repository-images.githubusercontent.com/190767422/73354680-8949-11e9-8dc9-b5749b98dd26" alt="..." class="img-fluid" />
+                <img src="https://i.pinimg.com/736x/6b/e5/66/6be5661411ef93f59dfea6c7436acc85.jpg" class="img-fluid" />
             </div>
             <div class="col">
                 <h1>Кратко о проекте</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia tenetur reiciendis in quae, rem corporis id sequi debitis aliquam laudantium illum vel unde? Praesentium laboriosam neque eaque architecto maxime nihil?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia tenetur reiciendis in quae, rem corporis id sequi debitis aliquam laudantium illum vel unde? Praesentium laboriosam neque eaque architecto maxime nihil?</p>
-                <button type="button" class="btn btn-dark btn-lg">Подробнее</button>
+                <p>
+                    Регистрация на платформе абсолютно бесплатна. Создайте свой профиль, начните добавлять рецепты и делитесь своими кулинарными приключениями! Ваша кухня станет еще более разнообразной и увлекательной. Мы надеемся, что вы найдете здесь массу идей и вдохновения!
+                </p>
+                <button type="button" class="btn btn-dark btn-lg">Войти</button>
             </div>
         </div>
     </div>
@@ -88,12 +87,14 @@
     <div class="container">
         <div class="row align-items-center projects">
             <div class="col">
-                <h1>Я люблю базы данных!</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quod aliquam corporis tempore nostrum. Animi rem quisquam deleniti qui ad ipsa quod! Animi corrupti, ex blanditiis dolor error nulla consectetur.</p>
+                <h1>Связь с нами</h1>
+                <p>По всем вопросам, предложениям, жалобам писать на почту - отвечаем и реагируем быстро и оперативно </p>
+                <p>Почта: recipeforyou@gmail.com</p>
             </div>
         </div>
     </div>
 </section>
+
 @code{
 
 	public class User
