--- a/BlazorAppRecipe/Pages/Home.razor
+++ b/BlazorAppRecipe/Pages/Home.razor
@@ -30,7 +30,7 @@
                 <p>Что мы предлагаем?</p>
             </div>
             <div class="col">
-                <img src="https://goods-photos.static1-sima-land.com/items/7325965/1/700-nw.jpg">
+                <img src="https://github.com/pdtplfcvthnb/RecipeWEBrender22/blob/main/700-nw.jpg?raw=true">
             </div>
         </div>
         <div class="block"></div>
