--- a/BlazorAppRecipe/Pages/Home.razor
+++ b/BlazorAppRecipe/Pages/Home.razor
@@ -12,7 +12,7 @@
 					<a class="nav-link active" aria-current="page" href="#">Главная</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/users">Пользователи</a>
+					<a class="nav-link" href="/User">Пользователи</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Контакты</a>
